Fix accordion icon width on mobile

--- a/components/paragraph/ParagraphFaqs/ParagraphFaqs.module.scss
+++ b/components/paragraph/ParagraphFaqs/ParagraphFaqs.module.scss
@@ -18,10 +18,15 @@
   display: flex;
   padding: rem(19px);
   border: 1px solid var(--color-primary);
+}
+
+.questionIcon {
+  width: rem(25px);
+  margin-left: auto;
 
   svg {
     width: rem(11px);
-    margin-left: auto;
+    margin-top: rem(10px);
   }
 }
 
